2008-08-26  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Test for  https://bugs.webkit.org/show_bug.cgi?id=20479

        * http/tests/security/canvas-remote-read-redirect-to-remote-image-expected.txt: Added.
        * http/tests/security/canvas-remote-read-redirect-to-remote-image.html: Added.
        * http/tests/security/canvas-remote-read-svg-image-expected.txt:
        * http/tests/security/canvas-remote-read-svg-image.html: Fix incorrect log message.
        * http/tests/security/resources/redir.php: Added.

2008-08-25  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Darin.

        Test case for Bug 20247: setAttributeNode() does not work when attribute name
        has a capital letter in it
        https://bugs.webkit.org/show_bug.cgi?id=20247

        <rdar://problem/6118218>

        Most of this test case was done by Eric Roman <minatoar@gmail.com>, the rest by ap and was
        tweaked by me.

        * fast/dom/Element/getAttribute-check-case-sensitivity-expected.txt: Added.
        * fast/dom/Element/getAttribute-check-case-sensitivity.html: Added.
        * fast/dom/Element/resources/getAttribute-check-case-sensitivity.js: Added.

2008-08-25  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Test for https://bugs.webkit.org/show_bug.cgi?id=20514

        * http/tests/security/canvas-remote-read-svg-image-expected.txt: Added.
        * http/tests/security/canvas-remote-read-svg-image.html: Added.
        * http/tests/security/resources/image-wrapper.svg: Added.

2008-08-25  Dean Jackson  <dino@apple.com>

        Reviewed by Dave Hyatt.

        Tests for 'inherit' keyword in transition property.
        https://bugs.webkit.org/show_bug.cgi?id=20513

        * transitions/inherit-expected.txt: Added.
        * transitions/inherit.html: Added.
        * transitions/inherit-other-props-expected.txt: Added.
        * transitions/inherit-other-props.html: Added.
