@@ -1,0 +1,22 @@
+<html>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+</script>
+<body id="body">
+    
+    <table STYLE="visibility: hidden; left: 489px; top: 105px; width: 213px; "></table>
+    
+    <div id="result"></div>
+    
+    <script>
+        if (window.accessibilityController) {
+            var body = document.getElementById("body");
+            body.focus();
+            var table = accessibilityController.focusedElement.childAtIndex(0);
+
+            result.innerText += "Test passes if there is no crash\n\n";            
+        }
+    </script>
+</body>
+</html>
