@@ -99,6 +99,9 @@ bool AccessibilityTable::isTableExposableThroughAccessibility()
     // go through the cell's and check for tell-tale signs of "data" table status
     // cells have borders, or use attributes like headers, abbr, scope or axis
     RenderTableSection* firstBody = table->firstBody();
+    if (!firstBody)
+        return false;
+    
     int numCols = firstBody->numColumns();
     int numRows = firstBody->numRows();
     
